fix wrong position footer when loader is activated

--- a/src/components/Home/Loading/style.scss
+++ b/src/components/Home/Loading/style.scss
@@ -27,6 +27,10 @@
   }
 }
 
+.loading-section{
+  height: calc(92vh - 4em);
+}
+
 .loading {
   position: fixed;
   left: 50%;
